--- a/index.html
+++ b/index.html
@@ -51,33 +51,33 @@
         <p><strong><em>Cursos</em></strong></p>
         <div class="navegacion_aula">
           <ul>
-            <li><a href="#">CyT (3° Grado)</a>
+            <li><a href="#">COMUNICACIÓN</a>
               <ul>
-                <li><a href="#" id="cyt3sem1">Semana 1</a></li>
+                <li><a href="#" id="com_sem1">Semana 1</a></li>
                 <!-- <li><a href="#" id="cyt3sem2">Semana 2</a></li> -->
                 <!-- <li><a href="#" id="cyt3sem3">Semana 3</a></li> -->
                 <!-- <li><a href="#" id="cyt3sem4">Semana 4</a></li> -->
               </ul>
             </li>
-            <li><a href="#">EPT (1° Grado)</a>
+            <li><a href="#">MATEMÁTICA</a>
               <ul>
-                <li><a href="#" id="ept1sem1">Semana 1</a></li>
+                <li><a href="#" id="mat_sem1">Semana 1</a></li>
                 <!-- <li><a href="#" id="ept1sem2">Semana 2</a></li> -->
                 <!-- <li><a href="#" id="ept1sem3">Semana 3</a></li> -->
                 <!-- <li><a href="#" id="ept1sem4">Semana 4</a></li> -->
               </ul>
             </li>
-            <li><a href="#">EPT (2° Grado)</a>
+            <li><a href="#">CIENCIA Y AMBIENTE</a>
               <ul>
-                <li><a href="#" id="ept2sem1">Semana 1</a></li>
+                <li><a href="#" id="cya_sem1">Semana 1</a></li>
                 <!-- <li><a href="#" id="ept2sem2">Semana 2</a></li> -->
                 <!-- <li><a href="#" id="ept2sem3">Semana 3</a></li> -->
                 <!-- <li><a href="#" id="ept2sem4">Semana 4</a></li> -->
               </ul>
             </li>
-            <li><a href="#">TUTORÍA (1° D)</a>
+            <li><a href="#">PERSONAL SOCIAL</a>
               <ul>
-                <li><a href="#" id="tut1dsem1">Semana 1</a></li>
+                <li><a href="#" id="ps_sem1">Semana 1</a></li>
                 <!-- <li><a href="#" id="tut1dsem2">Semana 2</a></li> -->
                 <!-- <li><a href="#" id="tut1dsem3">Semana 3</a></li> -->
                 <!-- <li><a href="#" id="tut1dsem4">Semana 4</a></li> -->
