--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         <p><strong><em>Material de Clase</em></strong></p>
         <p id="tema_semana"></p>
         <p><a id="lectura_complementaria" href="#" download><button type="button" name="button">Lectura Complementaria</button></a></p>
-        <p><a id="tarea_domiciliaria" href="#" download><button type="button" name="button">Tarea Domiciliaria</button></a></p>
+        <p><a id="tarea_domiciliaria" href="#" target="_blank"><button type="button" name="button">Tarea Domiciliaria</button></a></p>
         <p id="fecha_presentacion"></p>
       </div>
       <div class="poster_aula">
