--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="../css/master-dist.css">
-  <link rel="stylesheet" href="../css/aula-dist.css">
+  <link rel="stylesheet" href="css/master.css">
+  <link rel="stylesheet" href="css/aula.css">
   <title>MARCIA FERNÁNDEZ</title>
 </head>
 <body>
@@ -17,7 +17,7 @@
     <div class="presentacion">
       <div class="foto">
         <figure>
-          <img src="../img/Marcia_Fernandez.jpg" alt="Docente">
+          <img src="img/Marcia_Fernandez.jpg" alt="Docente">
         </figure>
         <p><em>Prof.<sup>a</sup> Marcia Fernández Cruzado</em></p>
       </div>
@@ -42,7 +42,7 @@
     <div class="presentacion_aula" id="presentacion_aula">
       <div class="foto_aula" id="foto_aula">
         <figure>
-          <img src="../img/Marcia_Fernandez.jpg" alt="Docente">
+          <img src="img/Marcia_Fernandez.jpg" alt="Docente">
         </figure>
         <p><em>Prof.<sup>a</sup> Marcia Fernández Cruzado</em></p>
         <p>fernandezcruzadomarcia@gmail.com</p>
@@ -51,36 +51,36 @@
         <p><strong><em>Cursos</em></strong></p>
         <div class="navegacion_aula">
           <ul>
-            <li><a href="#">COMUNICACIÓN</a>
+            <li><a href="#">CyT (3° Grado)</a>
               <ul>
-                <li><a href="#" id="com_sem1">Semana 1</a></li>
-                <!-- <li><a href="#" id="cyt3sem2">Semana 2</a></li> -->
-                <!-- <li><a href="#" id="cyt3sem3">Semana 3</a></li> -->
-                <!-- <li><a href="#" id="cyt3sem4">Semana 4</a></li> -->
+                <li><a href="#" id="cyt3sem1">Semana 1</a></li>
+                <li><a href="#" id="cyt3sem2">Semana 2</a></li>
+                <li><a href="#" id="cyt3sem3">Semana 3</a></li>
+                <li><a href="#" id="cyt3sem4">Semana 4</a></li>
               </ul>
             </li>
-            <li><a href="#">MATEMÁTICA</a>
+            <li><a href="#">EPT (1° Grado)</a>
               <ul>
-                <li><a href="#" id="mat_sem1">Semana 1</a></li>
-                <!-- <li><a href="#" id="ept1sem2">Semana 2</a></li> -->
-                <!-- <li><a href="#" id="ept1sem3">Semana 3</a></li> -->
-                <!-- <li><a href="#" id="ept1sem4">Semana 4</a></li> -->
+                <li><a href="#" id="ept1sem1">Semana 1</a></li>
+                <li><a href="#" id="ept1sem2">Semana 2</a></li>
+                <li><a href="#" id="ept1sem3">Semana 3</a></li>
+                <li><a href="#" id="ept1sem4">Semana 4</a></li>
               </ul>
             </li>
-            <li><a href="#">CIENCIA Y AMBIENTE</a>
+            <li><a href="#">EPT (2° Grado)</a>
               <ul>
-                <li><a href="#" id="cya_sem1">Semana 1</a></li>
-                <!-- <li><a href="#" id="ept2sem2">Semana 2</a></li> -->
-                <!-- <li><a href="#" id="ept2sem3">Semana 3</a></li> -->
-                <!-- <li><a href="#" id="ept2sem4">Semana 4</a></li> -->
+                <li><a href="#" id="ept2sem1">Semana 1</a></li>
+                <li><a href="#" id="ept2sem2">Semana 2</a></li>
+                <li><a href="#" id="ept2sem3">Semana 3</a></li>
+                <li><a href="#" id="ept2sem4">Semana 4</a></li>
               </ul>
             </li>
-            <li><a href="#">PERSONAL SOCIAL</a>
+            <li><a href="#">TUTORÍA (1° D)</a>
               <ul>
-                <li><a href="#" id="ps_sem1">Semana 1</a></li>
-                <!-- <li><a href="#" id="tut1dsem2">Semana 2</a></li> -->
-                <!-- <li><a href="#" id="tut1dsem3">Semana 3</a></li> -->
-                <!-- <li><a href="#" id="tut1dsem4">Semana 4</a></li> -->
+                <li><a href="#" id="tut1dsem1">Semana 1</a></li>
+                <li><a href="#" id="tut1dsem2">Semana 2</a></li>
+                <li><a href="#" id="tut1dsem3">Semana 3</a></li>
+                <li><a href="#" id="tut1dsem4">Semana 4</a></li>
               </ul>
             </li>
           </ul>
@@ -91,25 +91,29 @@
       <div class="material_aula" id="material_aula">
         <p><strong><em>Material de Clase</em></strong></p>
         <p id="tema_semana"></p>
-        <p><a id="lectura_complementaria" href="#" target="_blank"><button type="button" name="button">Lectura Complementaria</button></a></p>
-        <p><a id="tarea_domiciliaria" href="#" target="_blank"><button type="button" name="button">Tarea Domiciliaria</button></a></p>
+        <p><a id="lectura_complementaria" href="#" download><button type="button" name="button">Lectura Complementaria</button></a></p>
+        <p><a id="tarea_domiciliaria" href="#" download><button type="button" name="button">Tarea Domiciliaria</button></a></p>
         <p id="fecha_presentacion"></p>
       </div>
       <div class="poster_aula">
         <figure>
-          <img src="../img/poster.jpg" alt="">
+          <img src="img/poster.jpg" alt="">
         </figure>
+        <!-- <video src="" poster="img/poster.jpg">
+        </video> -->
       </div>
     </div>
-    <!-- SOLO EL VIDEO PARA MAXIMIZAR EN EL CELULAR -->
+    <!-- PROBANDO SOLO EL VIDEO PARA MAXIMIZAR EN EL CELULAR -->
     <div class="video_aula_max" id="video_aula_max">
       <figure>
+        <!-- <iframe id="video_aula" class="video_aula" src="https://drive.google.com/file/d/0B2EsL-JaXOMXNFFpVXNFYXUyZlU/preview" width="" height="" controls></iframe> -->
+        <!-- <iframe id="video_aula" class="video_aula" src="#"></iframe> -->
         <iframe id="video_aula" class="video_aula" src="" poster="#"></iframe>
       </figure>
     </div>
   </div>
-  <script type="text/javascript" src="../js/login-dist.js"></script>
-  <script type="text/javascript" src="../js/limpiar-dist.js"></script>
-  <script type="text/javascript" src="../js/aula-dist.js"></script>
+  <script type="text/javascript" src="js/login.js"></script>
+  <script type="text/javascript" src="js/limpiar.js"></script>
+  <script type="text/javascript" src="js/aula.js"></script>
 </body>
 </html>
