--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             </li>
             <li><a href="#">CIENCIA Y AMBIENTE</a>
               <ul>
-                <li><a href="#" id="cya_sem1">Semana 1</a></li>
+                <!-- <li><a href="#" id="cya_sem1">Semana 1</a></li> -->
                 <!-- <li><a href="#" id="ept2sem2">Semana 2</a></li> -->
                 <!-- <li><a href="#" id="ept2sem3">Semana 3</a></li> -->
                 <!-- <li><a href="#" id="ept2sem4">Semana 4</a></li> -->
@@ -77,7 +77,7 @@
             </li>
             <li><a href="#">PERSONAL SOCIAL</a>
               <ul>
-                <li><a href="#" id="ps_sem1">Semana 1</a></li>
+                <!-- <li><a href="#" id="ps_sem1">Semana 1</a></li> -->
                 <!-- <li><a href="#" id="tut1dsem2">Semana 2</a></li> -->
                 <!-- <li><a href="#" id="tut1dsem3">Semana 3</a></li> -->
                 <!-- <li><a href="#" id="tut1dsem4">Semana 4</a></li> -->
@@ -101,12 +101,25 @@
         </figure>
       </div>
     </div>
+    <!-- TITULO DEL ESPACIO DEL VIDEO -->
+    <div class="espacio_video_aula" id="espacio_video_aula">
+      <p class="titulo_video_aula"><strong>VIDEO DE LA CLASE</strong></p>
+    </div>
     <!-- SOLO EL VIDEO PARA MAXIMIZAR EN EL CELULAR -->
     <div class="video_aula_max" id="video_aula_max">
       <figure>
         <iframe id="video_aula" class="video_aula" src="" poster="#"></iframe>
       </figure>
     </div>
+    <!-- TITULO DEL ESPACIO DEL MATERIAL EMBEBIDO -->
+    <!-- <div class="espacio_video_aula" id="espacio_material_aula"> -->
+      <!-- <p class="titulo_video_aula"><strong>MATERIAL DE LA CLASE</strong></p> -->
+    <!-- </div> -->
+    <!-- MATERIAL EMBEBIDO -->
+    <!-- <div class="material_embebido" id="material_embebido"> -->
+      <!-- <embed type="video/quicktime" src="#" width="300" height="300"> -->
+      <!-- <embed id="ver_material_embebido" type="application/pdf" src="" width="" height=""> -->
+    <!-- </div> -->
   </div>
   <script type="text/javascript" src="../js/login-dist.js"></script>
   <script type="text/javascript" src="../js/limpiar-dist.js"></script>
