--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             </li>
             <li><a href="#">PERSONAL SOCIAL</a>
               <ul>
-                <!-- <li><a href="#" id="ps_sem1">Semana 1</a></li> -->
+                <li><a href="#" id="ps_sem1">Semana 1</a></li>
                 <!-- <li><a href="#" id="tut1dsem2">Semana 2</a></li> -->
                 <!-- <li><a href="#" id="tut1dsem3">Semana 3</a></li> -->
                 <!-- <li><a href="#" id="tut1dsem4">Semana 4</a></li> -->
