--- a/index.html
+++ b/index.html
@@ -83,6 +83,14 @@
                 <!-- <li><a href="#" id="tut1dsem4">Semana 4</a></li> -->
               </ul>
             </li>
+            <li><a href="#">RAZ. VERBAL</a>
+              <ul>
+                <li><a href="#" id="rv_sem1">Semana 1</a></li>
+                <!-- <li><a href="#" id="tut1dsem2">Semana 2</a></li> -->
+                <!-- <li><a href="#" id="tut1dsem3">Semana 3</a></li> -->
+                <!-- <li><a href="#" id="tut1dsem4">Semana 4</a></li> -->
+              </ul>
+            </li>
           </ul>
         </div>
       </div>
