--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <li><a href="#">MATEMÁTICA</a>
               <ul>
                 <li><a href="#" id="mat_sem1">Semana 1</a></li>
-                <!-- <li><a href="#" id="ept1sem2">Semana 2</a></li> -->
+                <!-- <li><a href="#" id="mat_sem2">Semana 2</a></li> -->
                 <!-- <li><a href="#" id="ept1sem3">Semana 3</a></li> -->
                 <!-- <li><a href="#" id="ept1sem4">Semana 4</a></li> -->
               </ul>
@@ -86,6 +86,14 @@
             <li><a href="#">RAZ. VERBAL</a>
               <ul>
                 <li><a href="#" id="rv_sem1">Semana 1</a></li>
+                <!-- <li><a href="#" id="tut1dsem2">Semana 2</a></li> -->
+                <!-- <li><a href="#" id="tut1dsem3">Semana 3</a></li> -->
+                <!-- <li><a href="#" id="tut1dsem4">Semana 4</a></li> -->
+              </ul>
+            </li>
+            <li><a href="#">RAZ. MATEMÁTICO</a>
+              <ul>
+                <li><a href="#" id="rm_sem1">Semana 1</a></li>
                 <!-- <li><a href="#" id="tut1dsem2">Semana 2</a></li> -->
                 <!-- <li><a href="#" id="tut1dsem3">Semana 3</a></li> -->
                 <!-- <li><a href="#" id="tut1dsem4">Semana 4</a></li> -->
