--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <li><a href="#">MATEMÁTICA</a>
               <ul>
                 <li><a href="#" id="mat_sem1">Semana 1</a></li>
-                <!-- <li><a href="#" id="mat_sem2">Semana 2</a></li> -->
+                <li><a href="#" id="mat_sem2">Semana 2</a></li>
                 <!-- <li><a href="#" id="ept1sem3">Semana 3</a></li> -->
                 <!-- <li><a href="#" id="ept1sem4">Semana 4</a></li> -->
               </ul>
