--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <li><a href="#">COMUNICACIÓN</a>
               <ul>
                 <li><a href="#" id="com_sem1">Semana 1</a></li>
-                <!-- <li><a href="#" id="cyt3sem2">Semana 2</a></li> -->
+                <li><a href="#" id="com_sem2">Semana 2</a></li>
                 <!-- <li><a href="#" id="cyt3sem3">Semana 3</a></li> -->
                 <!-- <li><a href="#" id="cyt3sem4">Semana 4</a></li> -->
               </ul>
