--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <li><a href="#">CIENCIA Y AMBIENTE</a>
               <ul>
                 <li><a href="#" id="cya_sem1">Semana 1</a></li>
-                <!-- <li><a href="#" id="ept2sem2">Semana 2</a></li> -->
+                <li><a href="#" id="cya_sem2">Semana 2</a></li>
                 <!-- <li><a href="#" id="ept2sem3">Semana 3</a></li> -->
                 <!-- <li><a href="#" id="ept2sem4">Semana 4</a></li> -->
               </ul>
